# rust-chat

chat-service/: .env-sample  Cargo.toml  Dockerfile
chat-service/scripts/: init_db.sh
chat-service/src/internal/domain/entity/: chat.rs  message.rs  model.rs
