[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Souza <arfs.antonio@gmail.com>"]
description = "Chat service allow you to communicate with chat gpt api"
license = "MIT"
repository = ""


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "chat-service"



[dependencies]
uuid = {version = "1", features = ["v4"]}
chrono = {version = "0.4", features = ["serde"]}
tiktoken-rs = "0.5.7"



[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]
